adding booking system navbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,10 +9,25 @@ body {
   overflow-y: scroll; /* Always show scrollbar */
 }
 
+html, body {
+  overflow-y: scroll;
+}
+
+
 html[data-scroll-locked] body,
 body[data-scroll-locked] {
   overflow: hidden !important;
-  padding-right: 0 !important; /* Prevent padding compensation */
+  padding-right: 0 !important;
+  margin-right: 0 !important;
+}
+
+html, body {
+  overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+  width: 0px; 
+  background: transparent;
 }
 
 
